crates/slpy-eval/tests/snapshots/golden_grids__checker-drift_206x58_ascii-coarse.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: ascii-coarse  fg: chroma
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @|
| %@: *@+ -@# .@@. #@- =@* :@%  %@: +@+ -@#  @@. *@= =@* .@@  #@- +@+ :@%  %@: *@= =@# .@@. #@- +@* :@%  %@: *@+ -@# .@@. #@- =@* :@%  %@: +@+ -@#  @@. *@= =@* .@@  #@- +@+ :@%  %@: *@= =@# .@@. #@- +@* :@% |
|%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%|
|:##-:+#+:=#*::##::*#=:=#+:-##::##-:+#+:-#*::##::*#=:=#*:-##::*#-:+#+:-##::##-:+#=:=#*::##::*#=:+#+:-##::##-:+#+:=#*::##::*#=:=#+:-##::##-:+#+:-#*::##::*#=:=#*:-##::*#-:+#+:-##::##-:+#=:=#*::##::*#=:+#+:-##:|
|*-:**=:=*+:-**::**-:+*+:=**:-**-:+*=:=*+:-**::**=:+*+:=**::**-:+*=:=*+:-**-:**=:+*+:-**::**-:+*=:=**:-**-:**=:=*+:-**::**-:+*+:=**:-**-:+*=:=*+:-**::**=:+*+:=**::**-:+*=:=*+:-**-:**=:+*+:-**::**-:+*=:=**:-*|
|-**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**--**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**-|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|*--+*=-=*+--**--**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**--**--+*=-=*+--**--+*=-=*+--**--**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**--**--+*=-=*+--*|
|:*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:=#*::##-:+#=:=#+:-##::*#=:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:=#*::##-:+#=:=#+:-##::*#=:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*:|
|#:.*#=.=#+.-##..##-.+#+.-#*.:##:.*#=.=#*.:##..##-.+#+.-##..##:.*#=.=#*.:##:.*#-.+#+.-##..##-.+#=.=#*.:##:.*#=.=#+.-##..##-.+#+.-#*.:##:.*#=.=#*.:##..##-.+#+.-##..##:.*#=.=#*.:##:.*#-.+#+.-##..##-.+#=.=#*.:#|
|.%%:.+%+.-%#..%%..*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*..%%..#%-.+%+.:%%..%%:.+%+.-%#..%%..*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*..%%..#%-.+%+.:%%.|
|@. #@- =@* :@%  %@: *@+ -@#  @@. #@= =@* .@@  %@- +@+ -@%  @@. *@= =@# .@@  #@- +@+ :@%  %@: *@= -@# .@@. #@- =@* :@%  %@: *@+ -@#  @@. #@= =@* .@@  %@- +@+ -@%  @@. *@= =@# .@@  #@- +@+ :@%  %@: *@= -@# .@|
| @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@  @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@ |
|@. #@- =@* :@%  %@: *@+ -@#  @@. #@= =@* .@@  %@- +@+ -@%  @@. *@= =@# .@@  #@- +@+ :@%  %@: *@= -@# .@@. #@- =@* :@%  %@: *@+ -@#  @@. #@= =@* .@@  %@- +@+ -@%  @@. *@= =@# .@@  #@- +@+ :@%  %@: *@= -@# .@|
|.%%:.+%+.-%#..%%..*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*..%%..#%-.+%+.:%%..%%:.+%+.-%#..%%..*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*..%%..#%-.+%+.:%%.|
|%:.*%=.=%+.-%#..#%-.+%+.-%*.:%%:.*%=.=%*.:%#..#%-.+%+.-%#..#%:.*%=.=%*.:%%:.*%-.+%+.-%#..#%-.+%=.=%*.:%%:.*%=.=%+.-%#..#%-.+%+.-%*.:%%:.*%=.=%*.:%#..#%-.+%+.-%#..#%:.*%=.=%*.:%%:.*%-.+%+.-%#..#%-.+%=.=%*.:%|
|:*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:=#*::##-:+#=:=#+:-##::*#=:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:=#*::##-:+#=:=#+:-##::*#=:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*:|
|*--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--*|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|-**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**--**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**-|
|*--**=-=*+--**--**--+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+--**--**--+*=-=**--**--**=-=*+--**--**--+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+--**--**--+*=-=**--*|
|:##-:+#+:=#*::##::*#=:=#+:-##::##-:+#+:-#*::##-:*#=:=#*:-##::*#-:+#+:-#*::##-:+#=:=#*::##::*#=:+#+:-##::##-:+#+:=#*::##::*#=:=#+:-##::##-:+#+:-#*::##-:*#=:=#*:-##::*#-:+#+:-#*::##-:+#=:=#*::##::*#=:+#+:-##:|
|%:.*%=.=%*.:%#..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%:.*%=.=%*.:%%:.*%=.=%*.:%#..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%:.*%=.=%*.:%|
| %@: *@+ -@# .@@. #@- =@* :@%  %@: +@+ -@#  @@. *@= =@* .@@  #@- +@+ -@%  %@: *@= =@# .@@. #@- +@* :@%  %@: *@+ -@# .@@. #@- =@* :@%  %@: +@+ -@#  @@. *@= =@* .@@  #@- +@+ -@%  %@: *@= =@# .@@. #@- +@* :@% |
|@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @|
| @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@  @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@ |
|@. #@- =@* :@%  %@: +@+ -@# .@@. *@= =@* :@%  #@- +@+ -@#  %@: *@= =@* .@@. #@- +@+ :@%  %@: *@= -@# .@@. #@- =@* :@%  %@: +@+ -@# .@@. *@= =@* :@%  #@- +@+ -@#  %@: *@= =@* .@@. #@- +@+ :@%  %@: *@= -@# .@|
|.#%-.+%+.-%*..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%-.+%+.-%*..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#.|
|#::*#=:=#+:-##::##-:+#+:-#*::##::*#=:=#*:-##::*#-:+#+:-#*::##-:*#=:=#*::##::*#-:+#+:-##::##-:+#=:=#*::##::*#=:=#+:-##::##-:+#+:-#*::##::*#=:=#*:-##::*#-:+#+:-#*::##-:*#=:=#*::##::*#-:+#+:-##::##-:+#=:=#*::#|
|:**-:+*+:=**:-**-:**=:=*+:-**::**-:+*+:=**:-**-:+*=:=*+:-**-:**=:+*+:-**::**-:+*=:=*+:-**-:**=:+*+:-**::**-:+*+:=**:-**-:**=:=*+:-**::**-:+*+:=**:-**-:+*=:=*+:-**-:**=:+*+:-**::**-:+*=:=*+:-**-:**=:+*+:-**:|
|*--+*=-=*+-=**--**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**--**=-+*=-=*+--**--+*=-=*+-=**--**=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=**--**=-+*=-=*+--*|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|-**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**--**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**-|
|#::*#=:=#+:-#*::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::##-:+#=:=#*:-##::*#=:=#+:-#*::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::##-:+#=:=#*:-#|
|.##-.+#+.=#*.:##:.*#=.=#*.-##..##-.+#+.-##.:##:.*#=.=#*.:##..##-.+#+.-##..##-.*#=.=#*.:##:.*#=.+#+.-##..##-.+#+.=#*.:##:.*#=.=#*.-##..##-.+#+.-##.:##:.*#=.=#*.:##..##-.+#+.-##..##-.*#=.=#*.:##:.*#=.+#+.-##.|
|%..#%-.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.-%#..%%..#%-.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.-%#..%|
| %@: *@+ -@# .@@. #@- =@* :@@  %@: +@+ -@%  @@. *@= =@* .@@  %@- +@+ :@%  @@: *@= -@# .@@  #@- +@* :@%  %@: *@+ -@# .@@. #@- =@* :@@  %@: +@+ -@%  @@. *@= =@* .@@  %@- +@+ :@%  @@: *@= -@# .@@  #@- +@* :@% |
|@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @@  #@- =@* :@@  %@: *@+ -@%  @@. #@= =@* .@@  %@: +@+ :@%  @@. *@= =@# .@@  %@- +@* :@%  @@: *@= -@#  @|
| %@: *@+ -@#  @@. #@- =@* :@@  %@: +@+ -@%  @@. *@= =@* .@@  %@- +@+ :@%  @@: *@= -@# .@@  #@- +@* :@%  %@: *@+ -@#  @@. #@- =@* :@@  %@: +@+ -@%  @@. *@= =@* .@@  %@- +@+ :@%  @@: *@= -@# .@@  #@- +@* :@% |
|%..#%-.=%*.:%%..%%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%%..%%:.*%=.-%#..%%..#%-.=%*.:%%..%%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%%..%%:.*%=.-%#..%|
|.#%-.+%+.-%*.:%%:.*%=.=%*.-%#..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%:.*%=.=%*.:%%:.*%-.+%+.-%#..#%-.+%+.-%*.:%%:.*%=.=%*.-%#..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%:.*%=.=%*.:%%:.*%-.+%+.-%#.|
|#::*#=:=#+:-##::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::##-:+#=:=#*::##::*#=:=#+:-##::*#-:+#+:=#*::##-:*#=:=#+:-##::*#-:+#+:-#*::##-:+#=:=#*:-##::*#=:+#+:-#*::##-:+#=:=#*::#|
|-**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**--**=-+*+-=*+--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--+*=-+*+-=**-|
|+==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==+|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|=++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++==++==++===++==++==++==+++==++=|
|*--+*=-=*+-=**--+*=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**--+*=-=*+-=**--+*=-+*+-=*+--**=-+*=-=*+--**--+*=-+*+-=*+--**=-+*=-=*+--*|
|-**--+*+-=**--**--+*=-=*+--**--**--+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+--**--**--+*+-=**--**--+*=-=*+--**--**--+*+-=**--**--+*=-=*+--**--**=-+*+-=**--**--+*=-=*+--**--**=-+*+--**-|
|#::*#=:=#+:-##::##-:+#+:=#*::##::*#=:=#*:-##::*#-:+#+:-#*::##-:*#=:=#*::##::*#-:+#+:-##::##-:+#=:=#*::##::*#=:=#+:-##::##-:+#+:=#*::##::*#=:=#*:-##::*#-:+#+:-#*::##-:*#=:=#*::##::*#-:+#+:-##::##-:+#=:=#*::#|
|.#%-.+%+.-%*..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..#%-.+%+.-%*..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#..%%:.*%=.=%*.:%%..#%-.+%+.-%#.|
|@. #@- =@* :@%  %@: +@+ -@# .@@. *@= =@* :@%  #@- +@+ -@#  %@: *@= =@* .@@. #@- +@+ :@%  %@: *@= -@# .@@. #@- =@* :@%  %@: +@+ -@# .@@. *@= =@* :@%  #@- +@+ -@#  %@: *@= =@* .@@. #@- +@+ :@%  %@: *@= -@# .@|
| @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@  @@: *@+ -@#  @@. #@- =@* .@@  %@: +@+ -@%  @@. #@= =@# .@@  %@- +@+ :@%  @@. *@= -@# .@@  #@- +@* :@@ |
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 3ba78e297fc73edd
  1 190d12d82029d1eb
  2 8bb268c8aca4c44d
  3 c80bd3b4b2fc2fbb
  4 61b9e6aefd3d13ed
  5 3f6207a4c1ae2bcb
  6 627bf16d313af123
  7 a4a15ac8b5ca22f7
  8 006d639ff6b60e5f
  9 6d8146246a17fc4d
 10 5a8b46dfb343912d
 11 104f2d732a73831d
 12 03ba734f11eeadcd
 13 79a6f1877b952281
 14 176fe562d7a26c5d
 15 314c93332b81ea8f
 16 f4c2e558cc26fe95
 17 2fad201e179218bb
 18 9ac176bb1c5fca57
 19 cfd33cd34387c115
 20 14140a65ed198de7
 21 c1d7dfc8d8cbbf79
 22 7ae8fac45dd90875
 23 cc0722b4a86c1f9f
 24 dd835119f70fced7
 25 e09697340966ef0b
 26 18f8dadd05d354f5
 27 6f3112894f599775
 28 3ba78e297fc73edd
 29 176fe562d7a26c5d
 30 4c38ca6787ed31ef
 31 819721385dba0e11
 32 2181cbf21d89330f
 33 5122057d4d46286d
 34 3a95f1ed945ffcfb
 35 47e111bb946a191f
 36 cadad325d3b448f7
 37 de8110562ab88a7b
 38 5ba5ae7aec852395
 39 2983e06db896c18d
 40 ce72c3f6c29e0ae5
 41 8a0727530ed7104d
 42 244f98d67e804e21
 43 3ba78e297fc73edd
 44 daa105f187bb4fef
 45 741b95c471e9bd25
 46 5672d0017d05f0d7
 47 3015ffb0aa2539d7
 48 4474ba0177c494ed
 49 c4b095089dd68153
 50 47b3047ccaf5692d
 51 132a9fa4a340d549
 52 b3b36fb1a1c3156f
 53 aade9066acabd2df
 54 c3857303805786b7
 55 92a1807ceae3a629
 56 7ee70f9ac2723271
 57 176fe562d7a26c5d
