crates/slpy-eval/tests/snapshots/golden_grids__checker-drift_206x58_ascii-fine.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
checker-drift frame 7
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: ascii-fine  fg: chroma
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@|
|.08:.L8t.i8G..88,.C8i.t8L.:88..08;.f8f.;8G..88,.C81.18C.,88..G8;.f8f.;80..88:.L8t.18C.,88..G8i.t8L.:80..08:.L8t.i8G..88,.C8i.t8L.:88..08;.f8f.;8G..88,.C81.18C.,88..G8;.f8f.;80..88:.L8t.18C.,88..G8i.t8L.:80.|
|0:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,G0i,f0f,i0G,,00:,L01,10L,:00,,C0i,t0f,;0G,,00;,L0t,10C,:00:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,G0i,f0f,i0G,,00:,L01,10L,:00,,C0i,t0f,;0G,,00;,L0t,10C,:0|
|:CGi:fGt:1GL::GG;:LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;GG::LG1:tGf:iGC::CGi:fGt:1GL::GG;:LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;GG::LG1:tGf:iGC:|
|C;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LC1;tCt;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;;CCi;fCt;1CL;;CC;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LC1;tCt;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;;CCi;fCt;1CL;;C|
|iLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLiiLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLi|
|f11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11f|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|1ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff1|
|LiifL1itLfiiLLiiLL1ifLti1LfiiLLiifLtitLfiiLLiiLL1itLti1LLiiLLiifLtitLfiiLLiifL1itLti1LLiiLLiifLti1LfiiLLiifL1itLfiiLLiiLL1ifLti1LfiiLLiifLtitLfiiLLiiLL1itLti1LLiiLLiifLtitLfiiLLiifL1itLti1LLiiLLiifLti1LfiiL|
|:CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:fC1:1Cf:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:fC1:1Cf:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC:|
|G:,LG1,tGf,;GG,,GGi,fGt,iGC,:GG:,LG1,tGL,;GG,,CGi,fGf,iGC,,GG;,LG1,1GL,:GG:,CGi,tGf,iGG,,GG;,fGt,1GL,:GG:,LG1,tGf,;GG,,GGi,fGt,iGC,:GG:,LG1,tGL,;GG,,CGi,fGf,iGC,,GG;,LG1,1GL,:GG:,CGi,tGf,iGG,,GG;,fGt,1GL,:G|
|.08;.f8t.i8C.,88,.C81.t8L.:80..G8;.f8f.i8G..88:.L81.18L.:88..G8i.f8f.;8G..08:.L8t.18C.,88,.C8i.t8f.;80..08;.f8t.i8C.,88,.C81.t8L.:80..G8;.f8f.i8G..88:.L81.18L.:88..G8i.f8f.;8G..08:.L8t.18C.,88,.C8i.t8f.;80.|
|@. G@i t@L :@8  0@: L@t i@G .@@, C@1 1@C ,@8  0@; f@f ;@0  8@, C@1 1@C ,@@. G@i t@f :@0  8@: L@t i@G .@@. G@i t@L :@8  0@: L@t i@G .@@, C@1 1@C ,@8  0@; f@f ;@0  8@, C@1 1@C ,@@. G@i t@f :@0  8@: L@t i@G .@|
| 8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8  8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8 |
|@. G@i t@L :@8  0@: L@t i@G .@@, C@1 1@C ,@8  0@; f@f ;@0  @@, C@1 1@C ,@@. G@i t@f :@0  8@: L@t i@G .@@. G@i t@L :@8  0@: L@t i@G .@@, C@1 1@C ,@8  0@; f@f ;@0  @@, C@1 1@C ,@@. G@i t@f :@0  8@: L@t i@G .@|
|.08;.f8t.i8C.,88,.C81.t8L.:80..G8;.f8f.i8G..88:.L81.18L.:88..G8i.f8f.;8G..08:.L8t.18C.,88,.C8i.t8f.;80..08;.f8t.i8C.,88,.C81.t8L.:80..G8;.f8f.i8G..88:.L81.18L.:88..G8i.f8f.;8G..08:.L8t.18C.,88,.C8i.t8f.;80.|
|0:,C01,t0f,;0G,,G0i,f0t,i0C,:00:,L01,t0L,;0G,,C0i,f0f,i0C,,G0;,L01,10L,:00:,C0i,t0f,i0G,,G0;,f0t,10C,:00:,C01,t0f,;0G,,G0i,f0t,i0C,:00:,L01,t0L,;0G,,C0i,f0f,i0C,,G0;,L01,10L,:00:,C0i,t0f,i0G,,G0;,f0t,10C,:0|
|:CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:fC1:1Cf:;CC::LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:fC1:1Cf:;CC::LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC:|
|Li;fL1;tLf;iLL;;LL1;fLt;1LL;iLLi;fLt;tLf;iLL;;LL1;tLt;1LL;;LLi;fLt;tLf;iLLi;LL1;tLf;1LL;;LLi;fLt;1Lf;iLLi;fL1;tLf;iLL;;LL1;fLt;1LL;iLLi;fLt;tLf;iLL;;LL1;tLt;1LL;;LLi;fLt;tLf;iLLi;LL1;tLf;1LL;;LLi;fLt;1Lf;iL|
|1ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff1|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|f11tft1tft11ff11fft1tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft1tff11ff11tft1tft11ff11tft1tft11ff11fft1tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft1tff11ff11tft1tft11f|
|iLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLiiLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLi|
|C;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LC1;tCt;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;;CCi;fCt;1CL;;CC;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LC1;tCt;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;;CCi;fCt;1CL;;C|
|:CGi:fGt:1GL::GG;:LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;GG::LG1:tGf:iGC::CGi:fGt:1GL::GG;:LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;GG::LG1:tGf:iGC:|
|0:,C01,t0L,;0G,,G0;,f0t,i0C,,00:,L01,10L,:00,,G0i,f0f,i0G,,00:,L01,10L,:00,,C0i,t0f,;0G,,G0;,L0t,10C,:00:,C01,t0L,;0G,,G0;,f0t,i0C,,00:,L01,10L,:00,,G0i,f0f,i0G,,00:,L01,10L,:00,,C0i,t0f,;0G,,G0;,L0t,10C,:0|
|.08:.L8t.i8G..88,.C8i.t8L.:88..08;.f8f.i8G..88,.C81.18C.,88..G8;.f8f.;80..88:.L8t.18C.,88..G8i.t8L.:80..08:.L8t.i8G..88,.C8i.t8L.:88..08;.f8f.i8G..88,.C81.18C.,88..G8;.f8f.;80..88:.L8t.18C.,88..G8i.t8L.:80.|
|@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@|
| 8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8  8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8 |
|8,.C8i.t8L.:80..08;.f8t.i8G..88,.C81.18L.:88..G8;.f8f.;8G..88:.L81.18C.,88..G8i.t8f.;80..88:.L8t.i8C.,88,.C8i.t8L.:80..08;.f8t.i8G..88,.C81.18L.:88..G8;.f8f.;8G..88:.L81.18C.,88..G8i.t8f.;80..88:.L8t.i8C.,8|
|,G0;,f0t,i0C,,00:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,C0i,f0f,;0G,,00;,L0t,10C,:00,,C0i,t0f,;0G,,G0;,f0t,i0C,,00:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,C0i,f0f,;0G,,00;,L0t,10C,:00,,C0i,t0f,;0G,|
|G::LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:tGL:;GG::CGi:fGf:iGC::GG;:LGt:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL::GG::LG1:tGf:;GG::CGi:fGt:iGC::GG;:LG1:tGL:;GG::CGi:fGf:iGC::GG;:LGt:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL::G|
|;CCi;fCt;1CL;;CC;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fCt;tCf;iCC;;LC1;tCf;iCL;;CCi;fCt;1Cf;;CC;;LC1;tCf;iCL;;CCi;fCt;1CL;;CC;;LC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fCt;tCf;iCC;;LC1;tCf;iCL;;CCi;fCt;1Cf;;CC;;LC1;tCf;iCL;|
|LiifL1itLfi1LLiiLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLiiLL1ifLti1LfiiLLiifL1itLfi1LLiiLL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LLiiLL1ifLti1LfiiL|
|1ff11tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft11ff11ff11tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft11ff1|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|f11fft1tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft1tff11f|
|iLL1ifLti1LfiiLLiifL1itLfiiLLiiLL1itLti1LLiiLLiifLtitLfiiLLiiLL1itLti1LLiiLLiifLti1LfiiLLiifL1itLfi1LLiiLL1ifLti1LfiiLLiifL1itLfiiLLiiLL1itLti1LLiiLLiifLtitLfiiLLiiLL1itLti1LLiiLLiifLti1LfiiLLiifL1itLfi1LLi|
|C;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::LCi:tCt:iCL::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::LCi:tCt:iCL::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;C|
|,GG;,fGt,1GC,:GG:,LG1,tGL,;GG,,CGi,fGt,iGC,:GG;,LG1,1GL,;GG,,CGi,tGf,iGC,,GG;,LGt,1GL,:GG:,CG1,tGf,;GG,,GG;,fGt,1GC,:GG:,LG1,tGL,;GG,,CGi,fGt,iGC,:GG;,LG1,1GL,;GG,,CGi,tGf,iGC,,GG;,LGt,1GL,:GG:,CG1,tGf,;GG,|
|8,.C8i.t8L.;80..G8;.f8t.i8G.,88:.C81.18L.:80..G8;.f8f.;8G..08:.L81.18C.:88,.G8i.t8f.;8G..08;.L8t.i8C.,88,.C8i.t8L.;80..G8;.f8t.i8G.,88:.C81.18L.:80..G8;.f8f.;8G..08:.L81.18C.:88,.G8i.t8f.;8G..08;.L8t.i8C.,8|
| 8@: L@t i@G .@@, C@i t@L :@8  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  8@: L@t i@C ,@@. G@i t@L :@8  8@: L@t i@G .@@, C@i t@L :@8  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  8@: L@t i@C ,@@. G@i t@L :@8 |
|@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@@. G@i t@L :@8  8@: L@t ;@0  @@. C@1 1@C ,@@  0@; f@f ;@0  @@, C@1 1@C .@@  0@; t@L :@8  8@: L@t i@G .@|
| 8@: L@t i@G .@@. C@i t@L :@8  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  8@: L@t i@C .@@. G@i t@L :@8  8@: L@t i@G .@@. C@i t@L :@8  0@; f@f ;@0  @@, C@1 1@C ,@@  0@; f@f ;@0  8@: L@t i@C .@@. G@i t@L :@8 |
|8,.C8i.t8L.;80..08;.f8t.i8G.,88:.C81.18L.:80..G8;.f8f.;8G..08:.L81.18C.:88,.G8i.t8f.;80..08:.L8t.i8C.,88,.C8i.t8L.;80..08;.f8t.i8G.,88:.C81.18L.:80..G8;.f8f.;8G..08:.L81.18C.:88,.G8i.t8f.;80..08:.L8t.i8C.,8|
|,G0;,f0t,i0C,:00:,L01,t0L,;0G,,C0i,f0t,i0C,,00;,L01,10L,;00,,C0i,t0f,i0C,,G0;,L0t,10L,:00:,C0i,t0f,;0G,,G0;,f0t,i0C,:00:,L01,t0L,;0G,,C0i,f0t,i0C,,00;,L01,10L,;00,,C0i,t0f,i0C,,G0;,L0t,10L,:00:,C0i,t0f,;0G,|
|C;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:tCt:iCL::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:tCt:iCL::CCi:fCt:1CL:;CC;:LC1:tCf:iCC::CCi:fCt:1CL:;C|
|;LL1;fLt;1Lf;iLLi;fL1;tLf;iLL;;LL1;tLt;1LL;iLLi;fLt;tLf;iLLi;LL1;tLt;1LL;;LLi;fLt;1Lf;iLLi;fL1;tLf;1LL;;LL1;fLt;1Lf;iLLi;fL1;tLf;iLL;;LL1;tLt;1LL;iLLi;fLt;tLf;iLLi;LL1;tLt;1LL;;LLi;fLt;1Lf;iLLi;fL1;tLf;1LL;|
|f11fft1tft11ff11ff11tft11ff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tft11ff11ff11tft11ff11ff11fft1tff11ff11ff11tft11ff11ff11tft1tff11f|
|tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt|
|1fft1tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft1tff11fft1tft1tft11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11fft1tft1tff11ff11tft1tft11ff11tft1tft1tff1|
|LiifL1itLfi1LLiifL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LfiiLL1ifLti1LfiiLLiifL1itLfi1LLiifL1itLti1LfiiLLiifLtitLfi1LLiifL1itLti1LfiiLL1ifLtitLfiiLLiifL1itLti1LfiiLL1ifLti1LfiiL|
|;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fCt;tCf;iCC;;LC1;tCf;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;;LCi;fCt;1CL;;CCi;fC1;tCf;iCC;;LCi;fCt;1CL;;CCi;fCt;tCf;iCC;;LC1;tCf;1CL;;CCi;fCt;1Cf;iCC;;LC1;tCf;iCL;|
|G::LG1:tGf:iGG::CGi:fGt:1GC::GG;:LG1:tGL:;GG::CGi:fGf:iGC::GG;:LGt:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;GG::LG1:tGf:iGG::CGi:fGt:1GC::GG;:LG1:tGL:;GG::CGi:fGf:iGC::GG;:LGt:1GL:;GG::CGi:tGf:iGC::GG;:fGt:1GL:;G|
|,G0;,f0t,i0C,,00:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,C0i,f0f,;0G,,00;,L0t,10C,:00,,C0i,t0f,;0G,,G0;,f0t,i0C,,00:,C01,t0L,;00,,G0;,f0t,i0C,,00:,L01,10L,:00,,C0i,f0f,;0G,,00;,L0t,10C,:00,,C0i,t0f,;0G,|
|8,.C8i.t8L.:80..08;.f8t.i8G..88,.C81.18L.:88..G8;.f8f.;8G..88:.L81.18C.,88..G8i.t8f.;80..08:.L8t.i8C.,88,.C8i.t8L.:80..08;.f8t.i8G..88,.C81.18L.:88..G8;.f8f.;8G..88:.L81.18C.,88..G8i.t8f.;80..08:.L8t.i8C.,8|
| 8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8  8@: L@t i@G .@@. G@i t@L ,@@  8@: f@f ;@0  @@, C@1 1@C ,@@  0@; f@f :@0  @@, C@t i@G .@@  G@i t@L :@8 |
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 3ba78e297fc73edd
  1 190d12d82029d1eb
  2 8bb268c8aca4c44d
  3 c80bd3b4b2fc2fbb
  4 61b9e6aefd3d13ed
  5 3f6207a4c1ae2bcb
  6 627bf16d313af123
  7 a4a15ac8b5ca22f7
  8 006d639ff6b60e5f
  9 6d8146246a17fc4d
 10 5a8b46dfb343912d
 11 104f2d732a73831d
 12 03ba734f11eeadcd
 13 79a6f1877b952281
 14 176fe562d7a26c5d
 15 314c93332b81ea8f
 16 f4c2e558cc26fe95
 17 2fad201e179218bb
 18 9ac176bb1c5fca57
 19 cfd33cd34387c115
 20 14140a65ed198de7
 21 c1d7dfc8d8cbbf79
 22 7ae8fac45dd90875
 23 cc0722b4a86c1f9f
 24 dd835119f70fced7
 25 e09697340966ef0b
 26 18f8dadd05d354f5
 27 6f3112894f599775
 28 3ba78e297fc73edd
 29 176fe562d7a26c5d
 30 4c38ca6787ed31ef
 31 819721385dba0e11
 32 2181cbf21d89330f
 33 5122057d4d46286d
 34 3a95f1ed945ffcfb
 35 47e111bb946a191f
 36 cadad325d3b448f7
 37 de8110562ab88a7b
 38 5ba5ae7aec852395
 39 2983e06db896c18d
 40 ce72c3f6c29e0ae5
 41 8a0727530ed7104d
 42 244f98d67e804e21
 43 3ba78e297fc73edd
 44 daa105f187bb4fef
 45 741b95c471e9bd25
 46 5672d0017d05f0d7
 47 3015ffb0aa2539d7
 48 4474ba0177c494ed
 49 c4b095089dd68153
 50 47b3047ccaf5692d
 51 132a9fa4a340d549
 52 b3b36fb1a1c3156f
 53 aade9066acabd2df
 54 c3857303805786b7
 55 92a1807ceae3a629
 56 7ee70f9ac2723271
 57 176fe562d7a26c5d
